# cyberwright-app

./: README.md  package-lock.json  package.json  tsconfig.json
src/: types.d.ts  utils.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  lib.rs
src-tauri/src/api/: responses.rs  utils.rs
src-tauri/src/commands/: ai.rs  auth.rs  mod.rs  settings.rs
src-tauri/src/commands/files/: cmds.rs  mod.rs  structs.rs
src/components/: Authbox.tsx  CustomBreadcrumbs.tsx  CustomTabs.tsx  Diagnostics.tsx  FileTree.tsx  Navbar.tsx
src/pages/: _app.tsx  account.tsx  index.tsx  login.tsx  signup.tsx  view.tsx
src/styles/: globals.css
