[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = ["macos-private-api"] }
tauri-plugin-store = "2.0.0"
hyper-tls = { version = "0.4.0-alpha.4" }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-http = "2.0.0"
reqwest = { version = "0.12", features = ["blocking", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
tauri-runtime-wry = "2.0.0"
thiserror = "2.0.9"
tauri-plugin-shell = "2"
tauri-plugin-oauth = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0" }
